--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://github.com/malikovsh/my_portfolio",
+    "homepage": "https://malikovsh.github.io/my-portfolio",
     "name": "portfolio",
     "version": "0.1.0",
     "private": true,
