--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
         "@types/node": "^16.7.13",
         "@types/react": "^17.0.20",
         "@types/react-dom": "^17.0.9",
+        "i18next": "^24.2.2",
+        "i18next-browser-languagedetector": "^8.0.2",
+        "lucide-react": "^0.475.0",
         "react": "^17.0.2",
         "react-animate-on-scroll": "^2.1.5",
         "react-dom": "^17.0.2",
+        "react-i18next": "^15.4.0",
         "react-router-dom": "^6.2.1",
         "react-router-hash-link": "^2.4.3",
         "react-scripts": "5.0.0",
