--- a/package.json
+++ b/package.json
@@ -32,15 +32,18 @@
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "TSC_COMPILE_ON_ERROR=true react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+            "react-app"
+        ],
+        "rules": {
+            "no-console": "off",
+            "no-debugger": "off"
+        }
     },
     "browserslist": {
         "production": [
